# brick-SR1

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  config.yaml.bak.2026-03-19  config.yaml.pre-audit-backup  piano.md  pianocli.md
config/: config.yaml
evals/: benchmark_results.md  benchmark_results_mixed.md  build_brick_general_dataset.py  build_brick_hard_dataset.py  build_brick_large_dataset.py  build_brick_mixed_dataset.py  check_status.sh  check_status_v3.sh  cost_report.md  cost_report.py  domain_classifier_probe.py  domain_classifier_probe_results.json  monitor_v4.sh  monitor_v5.sh  parse_stage6_logs.py  patch_parse_generations.py  pricing.json  report_brick_large_results.md  run_brick_large.sh  run_brick_large_audit.sh  run_brick_large_v2.sh  run_evals.sh  run_evals_v2.sh  run_evals_v3.sh  run_gpt120b_reasoning.py  run_gptoss_reasoning.py  run_individual_models.sh  run_parallel.sh  (+13 more)
src/mymodel-cli/: pyproject.toml  requirements.txt
src/mymodel-cli/mymodel/: __init__.py
src/mymodel-cli/mymodel/cli/: __init__.py  add_commands.py  config_commands.py  config_generator.py  core.py  docker_cli.py  init_wizard.py  main.py  merger.py  parser.py  remove_commands.py  route_test.py  serve.py  ui.py  utils.py  validator.py
src/mymodel-cli/mymodel/cli/commands/: config.py  generate.py  init.py  serve.py  show_config.py  show_defaults.py  validate.py
src/mymodel-cli/mymodel/config/: __init__.py  loader.py  schema.py
src/mymodel-cli/tests/: test_algorithm_config.py  test_latency_validation.py  test_plugin_parsing.py  test_plugin_yaml_generation.py
(+390 files in other folders)
